--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-pandas==1.4.2
-scikit_learn==1.0.2
+dill==0.3.5.1
+ipython==8.3.0
+ipywidgets==7.5.1
+iso639==0.1.4
+munch==2.5.0
+numpy==1.19.2
+pandas==1.1.3
+pattern==3.6
+requests==2.27.1
+scikit_learn==1.1.1
+spacy==3.2.4
+torch==1.11.0
+tqdm==4.50.2
+traitlets==5.0.5
+transformers==4.19.2
